--- a/index.html
+++ b/index.html
@@ -1,54 +1,91 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>مبادرة بصمات شبابية</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff;
-      color: #333;
-      text-align: center;
-      padding: 50px 20px;
+      font-family: 'Cairo', 'Roboto', sans-serif;
+      background: linear-gradient(to bottom right, #ffffff, #f4f4f4);
+      color: #111;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: start;
+      min-height: 100vh;
     }
+
     header {
-      background: linear-gradient(to left, #008000, #ff0000, #000000);
+      width: 100%;
+      background: linear-gradient(to left, #ff0000, #008000, #000000);
+      padding: 50px 20px 40px;
       color: white;
-      padding: 30px 20px;
+      text-align: center;
     }
-    img {
-      width: 200px;
-      margin-top: 20px;
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+      font-weight: 700;
     }
-    h1 {
-      margin-top: 30px;
-      color: #008000;
+
+    .logo {
+      margin-top: -30px;
+      width: 180px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     }
-    p {
-      font-size: 1.2em;
-      margin-top: 10px;
+
+    main {
+      padding: 50px 20px;
+      text-align: center;
     }
+
+    main p {
+      font-size: 1.3em;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
     footer {
-      margin-top: 50px;
+      margin-top: auto;
+      width: 100%;
+      background-color: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
       font-size: 0.9em;
-      color: #777;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.8em;
+      }
+
+      main p {
+        font-size: 1.1em;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>مبادرة بصمات شبابية</h1>
-    <p>معاً نحو تمكين الشباب وصناعة أثر إيجابي</p>
   </header>
 
-  <img src="logo.jpg" alt="شعار المبادرة">
+  <img src="logo.jpg" alt="شعار المبادرة" class="logo" />
 
-  <p>الموقع تحت الإنشاء حالياً<br>تابعونا قريباً على <strong>youthimprints.com</strong></p>
+  <main>
+    <p>الموقع تحت الإنشاء حاليًا<br>تابعونا قريبًا على <strong>youthimprints.com</strong></p>
+  </main>
 
   <footer>
-    &copy; 2025 بصمات شبابية. جميع الحقوق محفوظة.
+    &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
   </footer>
+
 </body>
 </html>
