--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     main {
       padding: 50px 20px;
       text-align: center;
-      flex-grow: 1;
     }
 
     main p {
@@ -52,41 +51,13 @@
     }
 
     footer {
+      margin-top: auto;
+      width: 100%;
       background-color: #222;
       color: #ccc;
+      text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      width: 100%;
-      text-align: center;
-    }
-
-    .footer-text {
-      margin-bottom: 12px;
-    }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    .social-links a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      transition: transform 0.3s ease;
-    }
-
-    .social-links a:hover {
-      transform: scale(1.2);
-    }
-
-    .social-links svg {
-      display: block;
-      width: 28px;
-      height: 28px;
-      fill: #fff;
     }
 
     @media (max-width: 600px) {
@@ -113,26 +84,7 @@
   </main>
 
   <footer>
-    <div class="footer-text">
-      &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
-    </div>
-    <div class="social-links">
-      <a href="https://web.facebook.com/p/%D9%85%D8%A8%D8%A7%D8%AF%D8%B1%D8%A9-%D8%A8%D8%B5%D9%85%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7%D8%A8%D9%8A%D8%A9-100063497834494/?_rdc=1&_rdr#" target="_blank" aria-label="Facebook">
-        <svg viewBox="0 0 24 24" >
-          <path d="M22.675 0h-21.35C.592 0 0 .592 0 1.325v21.351C0 23.407.592 24 1.325 24h11.495v-9.294H9.691v-3.622h3.129V8.413c0-3.1 1.894-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.313h3.59l-.467 3.622h-3.123V24h6.116C23.408 24 24 23.407 24 22.676V1.325C24 .592 23.408 0 22.675 0z"/>
-        </svg>
-      </a>
-      <a href="https://www.instagram.com/youth_fingerprints_initiative/" target="_blank" aria-label="Instagram">
-        <svg viewBox="0 0 24 24" >
-          <path d="M7.75 2C4.149 2 2 4.149 2 7.75v8.5C2 19.851 4.149 22 7.75 22h8.5c3.601 0 5.75-2.149 5.75-5.75v-8.5C22 4.149 19.851 2 16.25 2h-8.5zm4.25 3.5a4.75 4.75 0 1 1 0 9.5 4.75 4.75 0 0 1 0-9.5zm5.5-.5a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5z"/>
-        </svg>
-      </a>
-      <a href="https://www.linkedin.com/company/youthimprints/" target="_blank" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" >
-          <path d="M4.983 3.5C3.57 3.5 2.5 4.583 2.5 6.018c0 1.398 1.033 2.5 2.454 2.5h.028c1.95 0 2.484-1.566 2.484-2.5 0-1.435-1.058-2.518-2.483-2.518zM2.5 21.5h5v-11h-5v11zm7.5-11h4.75v1.528h.067c.66-1.18 2.273-2.424 4.68-2.424 5.007 0 5.933 3.29 5.933 7.565V21.5h-5v-6.75c0-1.61-.028-3.684-2.25-3.684-2.255 0-2.6 1.76-2.6 3.578V21.5h-5v-11z"/>
-        </svg>
-      </a>
-    </div>
+    &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
   </footer>
 
 </body>
