--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
+      position: relative;
+    }
+
+    /* أيقونات الروابط في الفوتر */
+    .social-icons {
+      margin-top: 10px;
+    }
+    .social-icons a {
+      color: white;
+      margin: 0 10px;
+      display: inline-block;
+      vertical-align: middle;
+      transition: color 0.3s ease;
+    }
+    .social-icons a:hover {
+      color: #ff0000; /* تدرج أو لون عند المرور بالفأرة */
+    }
+    .social-icons svg {
+      fill: currentColor;
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
     }
 
     @media (max-width: 600px) {
@@ -85,6 +107,26 @@
 
   <footer>
     &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
+    <div class="social-icons" aria-label="روابط التواصل الاجتماعي">
+      <a href="https://web.facebook.com/p/%D9%85%D8%A8%D8%A7%D8%AF%D8%B1%D8%A9-%D8%A8%D8%B5%D9%85%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7%D8%A8%D9%8A%D8%A9-100063497834494/?_rdc=1&_rdr#" target="_blank" rel="noopener" title="فيسبوك">
+        <!-- Facebook SVG -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24h-1.918c-1.504 0-1.796.715-1.796 1.763v2.312h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.658V1.342C24 .6 23.4 0 22.675 0z"/>
+        </svg>
+      </a>
+      <a href="https://www.instagram.com/youth_fingerprints_initiative/" target="_blank" rel="noopener" title="انستجرام">
+        <!-- Instagram SVG -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7zm4.75-.75a1.25 1.25 0 112.5 0 1.25 1.25 0 01-2.5 0z"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/company/youthimprints/" target="_blank" rel="noopener" title="لنكد إن">
+        <!-- LinkedIn SVG -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.039-1.852-3.039-1.853 0-2.136 1.445-2.136 2.939v5.669H9.353V9h3.414v1.561h.047c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.372 4.271 5.455v6.288zM5.337 7.433a2.06 2.06 0 11.001-4.122 2.06 2.06 0 010 4.122zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.226.792 24 1.771 24h20.451c.98 0 1.778-.774 1.778-1.729V1.729C24 .774 23.205 0 22.225 0z"/>
+        </svg>
+      </a>
+    </div>
   </footer>
 
 </body>
