update padding values

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     header {
       width: 100%;
       background: linear-gradient(to left, #ff0000, #008000, #000000);
-      padding: 50px 20px 40px;
+      padding-top: 50px;
+      padding-bottom: 40px;
       color: white;
       text-align: center;
     }
@@ -61,7 +62,8 @@
       background-color: #222;
       color: #ccc;
       text-align: center;
-      padding: 20px;
+      padding-top: 20px;
+      padding-bottom: 20px;
       font-size: 0.9em;
       position: relative;
     }
