--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>مبادرة بصمات شبابية</title>
+  <meta name="description" content="مبادرة تطوعية تسعى إلى تمكين الشباب من خلال العمل المجتمعي، الورشات، والمشاريع التطوعية.">
+  <meta name="keywords" content="بصمات شبابية, youth imprints, مبادرة تطوعية, تمكين الشباب, نحن, العمل التطوعي">
+  <meta name="robots" content="index, follow">
+  <meta name="google-site-verification=HnZoAnFsjx1-p52sXE5foBtI6zJnvz_uiwrC8eWoGGo" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- favicon -->
