--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <meta name="google-site-verification=HnZoAnFsjx1-p52sXE5foBtI6zJnvz_uiwrC8eWoGGo" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- favicon -->
   <link rel="icon" href="logo.ico" type="image/x-icon" />
 
   <style>
@@ -141,7 +140,22 @@
       تطوع الآن
     </a>
   </main>
-
+  
+  <div class="counters">
+    <div class="counter-box">
+      <div class="counter" data-target="1000">0</div>
+      <p>+ ألف متطوع</p>
+    </div>
+    <div class="counter-box">
+      <div class="counter" data-target="500">0</div>
+      <p>فرصة تطوعية</p>
+    </div>
+    <div class="counter-box">
+      <div class="counter" data-target="5000">0</div>
+      <p>ساعة تطوعية</p>
+    </div>
+  </div>
+  
   <footer>
     &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
     <div class="social-icons" aria-label="روابط التواصل الاجتماعي">
