--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>مبادرة بصمات شبابية</title>
@@ -10,7 +9,6 @@
   <meta name="robots" content="index, follow">
   <meta name="google-site-verification=HnZoAnFsjx1-p52sXE5foBtI6zJnvz_uiwrC8eWoGGo" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
   <link rel="icon" href="logo.ico" type="image/x-icon" />
 
   <style>
@@ -76,6 +74,30 @@
       background-color: #006400;
     }
 
+    .stats {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 40px;
+      flex-wrap: wrap;
+    }
+
+    .stat {
+      text-align: center;
+    }
+
+    .stat .number {
+      font-size: 2.2em;
+      color: #000000;
+      font-weight: bold;
+    }
+
+    .stat .label {
+      font-size: 1em;
+      color: #666;
+      margin-top: 5px;
+    }
+
     footer {
       margin-top: auto;
       width: 100%;
@@ -119,6 +141,11 @@
       main p {
         font-size: 1.1em;
       }
+
+      .stats {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
@@ -139,38 +166,52 @@
     <a href="https://www.nahno.org/ngo/%D8%A8%D8%B5%D9%85%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7%D8%A8%D9%8A%D8%A9-70242" target="_blank" class="volunteer-button">
       تطوع الآن
     </a>
+
+    <div class="stats">
+      <div class="stat">
+        <span class="number" data-target="4059">0</span>
+        <div class="label">عدد المتقدمين</div>
+      </div>
+      <div class="stat">
+        <span class="number" data-target="565">0</span>
+        <div class="label">عدد الفرص</div>
+      </div>
+      <div class="stat">
+        <span class="number" data-target="31546">0</span>
+        <div class="label">عدد الساعات</div>
+      </div>
+    </div>
   </main>
-  
+
   <footer>
     &copy; 2025 جميع الحقوق محفوظة لمبادرة بصمات شبابية
     <div class="social-icons" aria-label="روابط التواصل الاجتماعي">
-      <a href="https://web.facebook.com/p/%D9%85%D8%A8%D8%A7%D8%AF%D8%B1%D8%A9-%D8%A8%D8%B5%D9%85%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7%D8%A8%D9%8A%D8%A9-100063497834494/?_rdc=1&_rdr#" target="_blank" rel="noopener" title="فيسبوك">
-        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24h-1.918c-1.504 0-1.796.715-1.796 1.763v2.312h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.658V1.342C24 .6 23.4 0 22.675 0z"/>
-        </svg>
-      </a>
-      <a href="https://www.instagram.com/youth_fingerprints_initiative/" target="_blank" rel="noopener" title="انستجرام">
-        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-          <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 1.5A4.25 4.25 0 003.5 7.75v8.5A4.25 4.25 0 007.75 20.5h8.5a4.25 4.25 0 004.25-4.25v-8.5A4.25 4.25 0 0016.25 3.5h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 1.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7zm4.75-.75a1.25 1.25 0 112.5 0 1.25 1.25 0 01-2.5 0z"/>
-        </svg>
-      </a>
-      <a href="https://www.linkedin.com/company/youthimprints/" target="_blank" rel="noopener" title="لنكد إن">
-        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.039-1.852-3.039-1.853 0-2.136 1.445-2.136 2.939v5.669H9.353V9h3.414v1.561h.047c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.372 4.271 5.455v6.288zM5.337 7.433a2.06 2.06 0 11.001-4.122 2.06 2.06 0 010 4.122zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.226.792 24 1.771 24h20.451c.98 0 1.778-.774 1.778-1.729V1.729C24 .774 23.205 0 22.225 0z"/>
-        </svg>
-      </a>
-      <a href="https://youtube.com/channel/UCAj56TCdn_4ItLmJX6GJO8A?si=gE-lzDgxSMYmLkFP" target="_blank" rel="noopener" title="يوتيوب">
-        <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-          <path d="M10 15l5.19-3L10 9v6zm12-9.5v13c0 1.38-1.12 2.5-2.5 2.5h-17C1.12 21 0 19.88 0 18.5v-13C0 4.12 1.12 3 2.5 3h17C20.88 3 22 4.12 22 5.5z"/>
-        </svg>
-      </a>
-      <a href="https://whatsapp.com/channel/0029VaGDfLuDOQITk0t0eI2b" target="_blank" rel="noopener" title="واتساب">
-        <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false">
-          <path d="M16.001 0.006c-8.837 0-16 7.163-16 15.999 0 2.82 0.739 5.572 2.14 7.997l-2.14 7.998 8.213-2.149c2.339 1.281 4.976 1.953 7.787 1.953 8.837 0 16-7.163 16-15.999s-7.163-15.999-16-15.999zM16 29.337c-2.407 0-4.75-0.645-6.794-1.866l-0.487-0.288-4.88 1.275 1.309-4.764-0.315-0.504c-1.287-2.059-1.966-4.437-1.966-6.89 0-7.119 5.881-12.922 13.112-12.922 3.503 0 6.794 1.364 9.27 3.841s3.841 5.768 3.841 9.271c0 7.122-5.882 12.923-13.11 12.923zM23.191 19.834c-0.353-0.177-2.088-1.031-2.411-1.149-0.323-0.118-0.56-0.177-0.797 0.177-0.235 0.353-0.915 1.149-1.123 1.385-0.206 0.235-0.412 0.265-0.765 0.088-0.353-0.177-1.494-0.551-2.844-1.758-1.051-0.94-1.76-2.103-1.963-2.456s-0.022-0.547 0.155-0.724c0.159-0.158 0.353-0.412 0.529-0.618 0.176-0.206 0.235-0.353 0.353-0.588 0.118-0.235 0.059-0.441-0.029-0.618-0.088-0.177-0.797-1.92-1.093-2.635-0.288-0.692-0.581-0.597-0.797-0.606-0.206-0.009-0.441-0.012-0.676-0.012s-0.618 0.088-0.941 0.441c-0.323 0.353-1.236 1.206-1.236 2.941s1.266 3.412 1.441 3.647c0.177 0.235 2.487 3.788 6.03 5.314 0.842 0.363 1.497 0.578 2.007 0.739 0.843 0.268 1.609 0.23 2.215 0.14 0.676-0.101 2.088-0.853 2.382-1.678 0.294-0.824 0.294-1.53 0.206-1.678-0.088-0.147-0.323-0.235-0.676-0.412z"/>
-        </svg>
-      </a>
+      <!-- روابط فيسبوك، إنستغرام، لينكدإن، يوتيوب، واتساب هنا -->
     </div>
   </footer>
+
+  <script>
+    const counters = document.querySelectorAll('.number');
+    const speed = 200;
+
+    counters.forEach(counter => {
+      const updateCount = () => {
+        const target = +counter.getAttribute('data-target');
+        const count = +counter.innerText;
+
+        const increment = Math.ceil(target / speed);
+
+        if (count < target) {
+          counter.innerText = count + increment;
+          setTimeout(updateCount, 20);
+        } else {
+          counter.innerText = target.toLocaleString();
+        }
+      };
+
+      updateCount();
+    });
+  </script>
 
 </body>
 </html>
